--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   },
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "less": "^3.13.0",
+    "less-loader": "^7.1.0",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.10.1",
     "webpack-cli": "^4.2.0"
   }
